Updated 1 file via CloudCannon.

--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -34,5 +34,9 @@ _inputs:
     type: text
     hidden: true
     cascade: true
+  title:
+    type: text
+    hidden: true
+    cascade: true
 data_config: {}
 timezone: Etc/UTC
