finished for now
- Dog pictures updaten
- ig/pinterest/fb buttons updaten (social sharing buttons funktionieren nicht richtig - DANIEL!)
- contact form checken
- auf mehreren devices checken

--- a/_data/site-settings.yml
+++ b/_data/site-settings.yml
@@ -7,6 +7,6 @@ seo:
   author: 
   favicon_image: /images/favicon.png
 social: 
-  instagram_username: @thaistreetpaws_dogrescue 
+  instagram_username: thaistreetpaws_dogrescue 
   facebook_url: https://www.facebook.com/thaistreetpawsrescue/
   twitter_username: 
