--- a/_data/site-settings.yml
+++ b/_data/site-settings.yml
@@ -1,7 +1,7 @@
 seo: 
   site_name: Thai Street Paws Rescue
-  title: Default SEO Title
-  description: 
+  title: Thai Street Paws Rescue
+  description: Thai Street Paws Rescue is a non-profit organization, saving dogs from the streets of Thailand and setting them up for adoption in Europe and America.
   keywords: 
   social_image: /images/logo.png
   author: 
